language/move-compiler/tests/move_check/parser/spec_parsing_generic_condition_fail.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/spec_parsing_generic_condition_fail.move:3:20
  │
3 │         ensures<T> exists<T>(0x1) <==> exists<T>(0x1);
  │                    ^^^^^^
  │                    │
  │                    Unexpected 'exists'
  │                    Expected ';'

